# PoreMapper

./: .gitignore  README.md  environment.yml  justfile  pyproject.toml  readme.rst  requirements.txt  setup.py
examples/: Cage_G_17_0_0_aa.mol  Cage_G_17_63_6_aa.mol  cc3.xyz  dual_inflation_example.py  hogrih_cage.xyz  hogsii_cage.xyz  hogsoo_cage.xyz  inflation_example copy.py  inflation_example.py  minimum_example.py  moc1.xyz  moc2.xyz  set_test_example.py  stk_example.py  yamashina_cage_.xyz
examples/min_example_output/: blob_0.xyz  blob_10.xyz  blob_15.xyz  blob_20.xyz  blob_25.xyz  blob_30.xyz  blob_35.xyz  blob_40.xyz  blob_45.xyz  blob_5.xyz  blob_50.xyz  blob_55.xyz  blob_60.xyz  blob_65.xyz  blob_70.xyz  blob_75.xyz  blob_80.xyz  blob_81.xyz  blob_82.xyz  blob_85.xyz  blob_90.xyz  blob_95.xyz  cc3_blob_0.xyz  cc3_blob_10.xyz  cc3_blob_20.xyz  cc3_blob_30.xyz  cc3_blob_40.xyz  cc3_blob_70.xyz  cc3_blob_80.xyz  cc3_blob_96.xyz  cc3_pore_10.xyz  cc3_pore_20.xyz  cc3_pore_30.xyz  moc1_blob_0.xyz  moc1_pore_0.xyz  moc2_blob_0.xyz  moc2_blob_10.xyz  moc2_blob_20.xyz  moc2_blob_30.xyz  moc2_blob_40.xyz  (+25 more)
pore_mapper/: host.py  pore.py  result.py
roll_gather/: __init__.py  atom.py  bead.py  blob.py  host.py  inflater.py  pore.py  radii.py  result.py  roller.py  step_result.py  utilities.py
src/pore_mapper/: __init__.py  atom.py  bead.py  blob.py  host.py  inflater.py  pore.py  radii.py  utilities.py
src/pore_mapper/_internal/: atom.py  bead.py  blob.py  (+6 more)
tests/: conftest.py
tests/atom/: test_atom.py
tests/bead/: test_bead.py
tests/blob/: conftest.py  test_blob.py
tests/host/: conftest.py  test_host.py
tests/inflater/: conftest.py  test_inflater.py
tests/pore/: conftest.py  test_pore.py  test_shape_measures.py
tests/utilities/: test_utilities.py
